--- a/VivaioBashar/css/style.css
+++ b/VivaioBashar/css/style.css
@@ -22,6 +22,13 @@ body {
     left: 10px; 
 }
 
+.waypoint {
+    height: 70px;
+    position: absolute;
+    right: 10px; 
+    top: 0px;
+}
+
 .title {
     margin: 0 auto;
 }
